Refactors device datafill for more characteristics

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,16 +12,55 @@ application.ingester:
     topic: rtl_433/46b62720dff5/events
   mapper:
     dscSecurity:
-      2181534: office-window
-      2256987: kitchen-sliding-door
-      2258011: master-bedroom-window-east
-      2258267: kitchen-sink-window
-      2295899: master-bedroom-window-southwest
-      2299227: master-bathroom-window
-      2321243: guest-room-window-east
-      2321755: front-door
-      2881949: kitchen-door
-      2893213: guest-room-window-north
-      3040669: garage-overhead
-      3054749: master-bedroom-window-southeast
-      3062685: living-room-window-northwest
+      2181534:
+        name: office-window
+        area: Office
+        type: window
+      2256987:
+        name: kitchen-sliding-door
+        area: Kitchen
+        type: door
+      2258011:
+        name: master-bedroom-window-east
+        area: MasterBedroom
+        type: window
+      2258267:
+        name: kitchen-sink-window
+        area: Kitchen
+        type: window
+      2295899:
+        name: master-bedroom-window-southwest
+        area: MasterBedroom
+        type: window
+      2299227:
+        name: master-bathroom-window
+        area: MasterBedroom
+        type: window
+      2321243:
+        name: guest-room-window-east
+        area: GuestRoom
+        type: window
+      2321755:
+        name: front-door
+        area: Foyer
+        type: door
+      2881949:
+        name: kitchen-door
+        area: Kitchen
+        type: door
+      2893213:
+        name: guest-room-window-north
+        area: GuestRoom
+        type: window
+      3040669:
+        name: garage-overhead
+        area: Garage
+        type: door
+      3054749:
+        name: master-bedroom-window-southeast
+        area: MasterBedroom
+        type: window
+      3062685:
+        name: living-room-window-northwest
+        area: LivingRoom
+        type: window
