--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server.port: ${SERVER_PORT:4000}
 
 info:
   app.name: ${spring.application.name}
-  app.version: ${version:LOCAL}
+  app.version: ${version:TBD}
   app.profile: ${spring.profiles.active}
 
 management:
